# Marble-Marcher-Community-Edition

./: .gitignore  CMakeLists.txt  README.md  build_on_windows.md  macOSBuildBundle.sh  macOSBuildExec.sh
game_folder/: README.txt
game_folder/levels/: Around_The_Citadel.lvl  Around_The_World.lvl  Asteroid_Field.lvl  Beware_Of_Bumps.lvl  Build_Up_Speed.lvl  Building_Bridges.lvl  Bunny_Hops.lvl  Don't_Get_Crushed.lvl  Everest.lvl  Expressways.lvl  Fatal_Fissures.lvl  Grid_pylons.lvl  Hole_In_One.lvl  Jump_The_Crater.lvl  Lily_Pads.lvl  Mega_Citadel.lvl  Mental_labyrinth.lvl  Mind_The_Gap.lvl  Mountain_Climbing.lvl  Planet_Crusher.lvl  Pylon_Palace.lvl  Ride_The_Gecko.lvl  The_Catwalk.lvl  The_Crown_Jewels.lvl  The_Hills_Are_Alive.lvl  The_Sponge.lvl  Too_Many_Trees.lvl  Top_Of_The_Citadel.lvl  Tunnel.lvl  World_tree.lvl
game_folder/levels/best_runs/: readme.txt
game_folder/locals/: Chinese.loc  Danish.loc  English.loc  French.loc  German.loc  Japanese.loc  Polish.loc  Russian.loc  Ukrainian.loc
game_folder/shaders/: shader_documentation.md
game_folder/shaders/compute/: 2_PTGI.cfg  Bloom_horiz.glsl  Bloom_horiz.glsl_error.txt  Bloom_vertic.glsl  Bloom_vertic.glsl_error.txt  Final_step.glsl  Final_step.glsl_error.txt  Illumination_step.glsl  Illumination_step.glsl_error.txt  MAIN.cfg  MRRM1.glsl  MRRM1.glsl_error.txt  MRRM3.glsl  MRRM3.glsl_error.txt  NEON.cfg  ORIGINAL.cfg  PTGI.cfg  PathTracing.cfg  RNG.glsl  Shading_step.glsl  Shading_step.glsl_error.txt  auto_exposure_weighting.glsl  bloom.glsl  camera.glsl  distance_estimators.glsl  downsampling.glsl  mainGI.cfg  neon_shading.glsl  noise_test.cfg  original_functions.glsl  original_shading.glsl  ray_marching.glsl  shading.glsl  simple.cfg  summing.glsl
game_folder/shaders/compute/PTGI/: Direct.glsl  GI.glsl  GI.glsl_error.txt  GISurfaceRender.glsl  GISurfaceRender.glsl_error.txt  PathTrace.glsl
game_folder/shaders/compute/auto_exposure/: auto_exposure_weighting.glsl
game_folder/shaders/compute/main/: Final_step.glsl  Final_step.glsl_error.txt  Illumination_step.glsl  Illumination_step_GI.glsl  Shading_step.glsl  global_illumination_step.glsl  simple_shading.glsl
game_folder/shaders/compute/multires_marching/: MRRM1.glsl  MRRM2.glsl
game_folder/shaders/compute/neon/: neon_shading.glsl
game_folder/shaders/compute/noise/: noise.glsl  noise.glsl_error.txt
game_folder/shaders/compute/original/: original_functions.glsl  original_shading.glsl
game_folder/shaders/compute/post_processing/: Bloom_horiz.glsl  Bloom_vertic.glsl  TXAA.glsl  Temporal_Denoiser.glsl  bilateral_filter.glsl  bilateral_filter_wnormals.glsl  downsampling.glsl
game_folder/shaders/compute/utility/: RNG.glsl  bloom.glsl  camera.glsl  compute_shader_header.glsl  definitions.glsl  distance_estimators.glsl  interpolation.glsl  path_tracing.glsl  random_stuff.glsl  ray_marching.glsl  shading.glsl  shading_functions.glsl  uniforms.glsl
game_folder/shaders/textures/: readme.txt
game_folder/sound/music/: LICENSE.txt
shaders/compute/: main.cfg  mainGI.cfg
shaders/compute/auto_exposure/: auto_exposure_weighting.glsl
shaders/compute/main/: Final_step.glsl  Shading_step.glsl
shaders/compute/multires_marching/: MRRM1.glsl  MRRM2.glsl
shaders/compute/original/: original_functions.glsl
shaders/compute/post_processing/: Bloom_vertic.glsl
shaders/compute/utility/: RNG.glsl  distance_estimators.glsl  ray_marching.glsl  shading.glsl
src/: CMakeLists.txt  Camera.cpp  Camera.h  ExprParser.cpp  ExprParser.h  Gamemodes.cpp  Gamemodes.h  Interface.cpp  Interface.h  Level.cpp  Level.h  Localization.cpp  Localization.h  Main.cpp  Overlays.cpp  Overlays.h  Renderer.cpp  Renderer.h  Res.h  Scene.cpp  Scene.h  Settings.cpp  Settings.h  Shaders.cpp  Shaders.h  config.h.in
