add_library(MarbleMarcherSources
  Level.cpp
  Level.h

  Overlays.cpp
  Overlays.h

  Res.h

  Scene.cpp
  Scene.h

  Scores.cpp
  Scores.h

  Interface.h
  Interface.cpp
  
  Localization.h
  Localization.cpp

  Settings.h
  Settings.cpp

  Gamemodes.h
  Gamemodes.cpp
  
  Renderer.h
  Renderer.cpp
  
  Shaders.h
  Shaders.cpp
  
  Camera.h
  Camera.cpp
  
  ExprParser.h
  ExprParser.cpp
  
  SoundSystem.h
  SoundSystem.cpp
)
